# TestCode

./: TestJson.txt  capitron_pdf.ipynb  output.xlsx  output_1.xlsx  output_watch.xlsx  perf_test_bot.py  performance_test.ipynb  pyproject.toml  requirements.txt  test.html  test.ipynb  unegui_scrap.ipynb  unegui_scrap.py  xacbank_25.ipynb
stress_test/excel/bogdbank/1000/: 07-bogd-transaction-99851003-2024-12-25 16-04-57.xls
stress_test/excel/golomtbank_compact/20000/: 02-golomt-compact.xlsx
stress_test/excel/golomtbank_compact/30000/: 02-golomt-compact - Copy - Copy - Copy - Copy - Copy.xlsx
stress_test/excel/golomtbank_regular/2000/: R430006311_33393315699283946 - Copy.xlsx
stress_test/excel/golomtbank_regular/20000/: 02-golomt-regular - Copy (5) - Copy.xlsx  R000532409_32425728024090403 - Copy (4).xlsx  R000532409_32425750023985191 - Copy (3).xlsx  R430006311_33393285199887906 - Copy (5) - Copy.xlsx
stress_test/excel/golomtbank_regular/30000/: R430006311_33393315699283946.xlsx
stress_test/excel/khanbank_25/1000/: Statement_MNT_5007139610 (1).xlsx  ХААН БАЙГУУЛЛАГА 2-5 САР ХУУЛГА.xlsx  ХААН БАЙГУУЛЛАГА 5-8 САР ХУУЛГА.xlsx
stress_test/excel/khanbank_25/2000/: Statement_MNT_5007139610.xlsx
stress_test/excel/khanbank_25/3000/: Statement_MNT_5102099043 (2).xlsx  Statement_MNT_5102099043.xlsx
stress_test/excel/khanbank_25/30000/: Statement_MNT_5751276069 - Copy.xlsx
websocket/backend/: db.sqlite3
websocket/backend/chat/: consumers.py  task.py
websocket/backend/websocket/: asgi.py  settings.py  wsgi.py
websocket/frontend/: package-lock.json
(+90 files in other folders)
