[project]
name = "requirement"
version = "0.1.0"
description = ""
authors = [
    {name = "Nyambuu",email = "tnyambuu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium (>=4.35.0,<5.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "channels-redis (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
